--- a/homehero.html
+++ b/homehero.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EPÒK | Enter Your Era</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>EPÒK | Enter Your Era</title>
 
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
+<style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+        width: 100%;
+        height: 100%;
+        background: #000;
+        overflow: hidden;
+        font-family: system-ui, sans-serif;
+    }
 
-        html, body {
-            width: 100%;
-            height: 100%;
-            background: #000;
-            overflow: hidden;
-            font-family: system-ui, sans-serif;
-        }
+    /* HERO BACKGROUND */
+    #hero-bg {
+        position: fixed;
+        inset: 0;
+        background-image: url("assets/images/9378.png");
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        opacity: 0;
+        transition: opacity 1.6s
 
-        /* ===== HERO BACKGROUND ===== */
-        #hero-bg {
-            position: fixed;
-            inset: 0;
-            background-image: url("assets/images/9378.png");
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
-            opacity: 0;
-            transition: opacity 2s ease;
-            z-index: 0;
         }
 
         /* ===== HERO CHARACTER ===== */
