--- a/homehero.html
+++ b/homehero.html
@@ -111,7 +111,7 @@
 <body>
 
     <!-- HERO BACKGROUND -->
-    <div id="hero-bg"></div>
+    <div id="hero-bg" src="assets/images/c9378.png" />
 
     <!-- HERO CHARACTER -->
     <img id="hero-character" src="assets/images/herocharacter.png" alt="Hero">
