--- a/homehero.html
+++ b/homehero.html
@@ -129,7 +129,7 @@
     </div>
 
     <!-- HEARTBEAT AUDIO -->
-    <audio id="heartbeat-audio" src="assets/images/Heartbeat_sound.mp3"></audio>
+    <audio id="heartbeat-audio" src="assets/images/Heartbeat.mp3"></audio>
 
 <script>
     const introCrest = document.getElementById("intro-crest");
