--- a/homehero.html
+++ b/homehero.html
@@ -134,10 +134,10 @@
 <body>
 
   <!-- HERO BACKGROUND -->
-  <img id="hero-bg" src="assets/images/9378.png" alt="EPÒK Hero Image" />
+  <img id="hero-bg" src="assets/images/9378.png"/>
 
   <!-- INTRO CREST -->
-  <img id="intro-crest" src="assets/images/crest1.png" alt="EPÒK Crest" />
+  <img id="intro-crest" src="assets/images/crest1.png" alt="EPÒK Crest"/>
 
   <!-- CLICK HERE -->
   <div id="click-here">CLICK HERE</div>
