--- a/homehero.html
+++ b/homehero.html
@@ -134,7 +134,7 @@
 <body>
 
   <!-- HERO BACKGROUND -->
-  <img id="hero-bg" src="assets/images/9378.png"/>
+  <img id="hero-bg" src="assets/images/c9378.png">
 
   <!-- INTRO CREST -->
   <img id="intro-crest" src="assets/images/crest1.png" alt="EPÒK Crest"/>
