--- a/homehero.html
+++ b/homehero.html
@@ -149,7 +149,7 @@
   </div>
 
   <!-- HEARTBEAT AUDIO -->
-  <audio id="heartbeat-audio" src="assets/images/heartbeat.mp3"></audio>
+  <audio id="heartbeat-audio" src="assets/heartbeat.mp3"></audio>
 
   <script>
     const clickText  = document.getElementById("click-here");
