--- a/homehero.html
+++ b/homehero.html
@@ -113,7 +113,7 @@
     <div id="hero-bg"></div>
 
     <!-- CREST -->
-    <img id="intro-crest" src="assets/images/crest1.png">
+    <img id="intro-crest" src="assets/images/favicon.ico">
 
     <!-- CLICK HERE LABEL -->
     <div id="click-here">CLICK HERE</div>
